force-app/main/default/objects/ClaimMySiteRequest__c/ClaimMySiteRequest__c.object-meta.xml
<CustomObject>
    <description>Claim My Site Request object contains fields, layouts, profile specific record types and other information related to the claim request made by the Organization owner.</description>
    <label>Claim</label>
    <nameField>
        <displayFormat>CLM-{0000}</displayFormat>
        <label>Access Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>