force-app/main/default/objects/ClaimMySiteRequest__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <description>Formula field containing Assignee Full Name derived from Owner Lookup on Claim Object.</description>
    <formula>IF( ISBLANK(Owner:User.FirstName) ,  Owner:Queue.QueueName , Owner:User.FirstName+&apos; &apos;+Owner:User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee</label>
    <type>Text</type>
</CustomField>