force-app/main/default/objects/ClaimMySiteRequest__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>Populating the closed date as today&apos;s date if Status of the request is Approved, Denied or Duplicate</description>
    <formula>IF(OR(ISPICKVAL( Status__c , &quot;Approved&quot;), ISPICKVAL( Status__c , &quot;Denied&quot;), ISPICKVAL( Status__c , &quot;Duplicate&quot;)) , TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>