force-app/main/default/objects/ClaimMySiteRequest__c/fields/DateOfRequest__c.field-meta.xml
<CustomField>
    <fullName>DateOfRequest__c</fullName>
    <description>Date the request is made</description>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>