force-app/main/default/objects/ClaimMySiteRequest__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email Address of the Organization holder.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>