force-app/main/default/objects/ClaimMySiteRequest__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>First Name of the Requester</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>