force-app/main/default/objects/ClaimMySiteRequest__c/fields/HearAboutRE__c.field-meta.xml
<CustomField>
    <fullName>HearAboutRE__c</fullName>
    <description>Contains the &apos;how did you hear about us&apos; description from the requester.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>How did you hear about Resource Engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>