force-app/main/default/objects/ClaimMySiteRequest__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Last Name of the requester.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>