force-app/main/default/objects/ClaimMySiteRequest__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organization for which the claim request is submitted</description>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>