force-app/main/default/objects/ClaimMySiteRequest__c/fields/OrganizationRole__c.field-meta.xml
<CustomField>
    <fullName>OrganizationRole__c</fullName>
    <description>Description of the role specific to a particular organization.</description>
    <label>Organization Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>