force-app/main/default/objects/ClaimMySiteRequest__c/fields/OtherRole__c.field-meta.xml
<CustomField>
    <fullName>OtherRole__c</fullName>
    <description>Test field for role &apos;Other&apos;</description>
    <label>Other Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>