force-app/main/default/objects/ClaimMySiteRequest__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>Phone number of requester</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>