force-app/main/default/objects/ClaimMySiteRequest__c/fields/Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time__c</fullName>
    <formula>ClosedDate__c  -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>