force-app/main/default/objects/ClaimMySiteRequest__c/fields/ReasonForDenial__c.field-meta.xml
<CustomField>
    <fullName>ReasonForDenial__c</fullName>
    <description>If state user is denying the request, it must provide a Reason for Denial that will be communicated to the requester.</description>
    <label>Reason For Denial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>