force-app/main/default/objects/ClaimMySiteRequest__c/fields/ReasonforJoining__c.field-meta.xml
<CustomField>
    <fullName>ReasonforJoining__c</fullName>
    <description>Contains the details of the reason of joining description provided by the requester.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Reason for Joining</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>