force-app/main/default/objects/ClaimMySiteRequest__c/fields/RequestingOrganizationName__c.field-meta.xml
<CustomField>
    <fullName>RequestingOrganizationName__c</fullName>
    <description>Name of the organization which is to be added to the resource engine as requested by the organization holder.</description>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>