force-app/main/default/objects/ClaimMySiteRequest__c/fields/TermsAndConditionsCheck__c.field-meta.xml
<CustomField>
    <fullName>TermsAndConditionsCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox notifying the user to agree to all terms &amp; conditions</description>
    <label>Terms &amp; Conditions Check</label>
    <type>Checkbox</type>
</CustomField>