force-app/main/default/objects/ClaimMySiteRequest__c/fields/UniqueIdentificationNo__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentificationNo__c</fullName>
    <description>A Unique Id to be assigned to each request.</description>
    <label>UniqueIdentificationNo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>