force-app/main/default/objects/ClaimMySiteRequest__c/fields/VolunteerOps__c.field-meta.xml
<CustomField>
    <fullName>VolunteerOps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate whether the organization has volunteer opportunities</description>
    <label>Organization has volunteer opportunities</label>
    <type>Checkbox</type>
</CustomField>