force-app/main/default/objects/ClaimMySiteRequest__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <formula>Organization__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Code</label>
    <type>Text</type>
</CustomField>