force-app/main/default/objects/ClaimMySiteRequest__c/recordTypes/State_User_View.recordType-meta.xml
<RecordType>
    <fullName>State_User_View</fullName>
    <active>true</active>
    <description>Record Type to access fields and values specific to State User profile.</description>
    <label>RE State User View</label>
</RecordType>