force-app/main/default/objects/ClaimMySiteRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RequestingOrganizationName__c</columns>
    <columns>DateOfRequest__c</columns>
    <columns>Status__c</columns>
    <columns>Assignee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>