force-app/main/default/objects/ClaimMySiteRequest__c/listViews/ClaimSiteQueue_ClaimMySiteRequest.listView-meta.xml
<ListView>
    <fullName>ClaimSiteQueue_ClaimMySiteRequest</fullName>
    <columns>NAME</columns>
    <columns>RequestingOrganizationName__c</columns>
    <columns>DateOfRequest__c</columns>
    <columns>Status__c</columns>
    <columns>Assignee__c</columns>
    <filterScope>Queue</filterScope>
    <label>State User Queue</label>
    <queue>ClaimSiteQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>