force-app/main/default/objects/ClaimMySiteRequest__c/listViews/Denied_Claim_Requests.listView-meta.xml
<ListView>
    <fullName>Denied_Claim_Requests</fullName>
    <columns>NAME</columns>
    <columns>RequestingOrganizationName__c</columns>
    <columns>DateOfRequest__c</columns>
    <columns>Status__c</columns>
    <columns>Assignee__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </filters>
    <filters>
        <field>SourceSystem__c</field>
        <operation>notContain</operation>
        <value>UWGC</value>
    </filters>
    <label>Denied Claim Requests - UWBG</label>
    <queue>ClaimSiteQueue</queue>
</ListView>