force-app/main/default/objects/ClaimMySiteRequest__c/listViews/Denied_Claim_Requests_UWGC.listView-meta.xml
<ListView>
    <fullName>Denied_Claim_Requests_UWGC</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </filters>
    <filters>
        <field>SourceSystem__c</field>
        <operation>contains</operation>
        <value>UWGC</value>
    </filters>
    <label>Denied Claim Requests - UWGC</label>
</ListView>