force-app/main/default/objects/ClaimMySiteRequest__c/listViews/New_Claim_Requests_UWGC.listView-meta.xml
<ListView>
    <fullName>New_Claim_Requests_UWGC</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>SourceSystem__c</field>
        <operation>contains</operation>
        <value>UWGC</value>
    </filters>
    <label>New Claim Requests - UWGC</label>
    <queue>ClaimSiteQueue</queue>
</ListView>